# protobuf

./: Add-generic-GCC-support-for-atomic-operations.patch  CMakeLists.txt  config.h  tencent.mm.pbc.protobuf.sln  tencent.mm.pbc.protobuf.vcxproj
google/protobuf/: extension_set.cc  generated_message_util.cc  wire_format_lite.h
google/protobuf/io/: coded_stream.h  zero_copy_stream.cc  zero_copy_stream_impl_lite.cc
google/protobuf/stubs/: atomicops.h  atomicops_internals_arm_msvc.cc  atomicops_internals_arm_msvc.h  atomicops_internals_generic_gcc.h  common.cc  once.cc  once.h  platform_macros.h
